# CogTrace

./: .env.example  .gitignore  README.md  pyproject.toml
annotations/: pilot_splits.json
cog_trace/: __init__.py
cog_trace/adapters/: __init__.py  base.py  openhands_adapter.py
cog_trace/annotation/: __init__.py  agreement.py  schema.py
cog_trace/context/: __init__.py  policy.py
cog_trace/core/: __init__.py  graph.py  schema.py  state_machine.py
cog_trace/data/: __init__.py  split.py
cog_trace/evaluation/: __init__.py  extractor_metrics.py  prediction_metrics.py
cog_trace/extraction/: __init__.py  base.py  client.py  policy.py  prompt.py
cog_trace/guards/: __init__.py  policy.py
cog_trace/opd/: __init__.py  losses.py  sampler.py  schema.py
cog_trace/runtime/: __init__.py  manager.py
cog_trace/trajectory/: __init__.py  normalize.py
cog_trace/utils/: __init__.py
configs/context/: deepseek_v4_512k.json  qwen_128k.json  qwen_256k.json  state_ablation.json
docs/: annotation_guidelines.md  autodl_setup.md  cogtrace_v1.md  experiment_protocol.md  online_rerun.md  single_host_opd.md
patches/: openhands_benchmarks_cogtrace.patch
scripts/: analyze_results.py  autodl_bootstrap.sh  compare_online_runs.py  evaluate_extractor.py  prepare_annotations.py  render_case_report.py  replay_offline.py  run_online_openhands.py  split_trajectories.py
tests/: test_context_and_data.py  test_extractor_client.py  test_grounded_schema.py  test_legacy_cases.py  test_opd_contract.py  test_openhands_adapter.py  test_state_and_guards.py
(+3 files in other folders)
