[project]
name = "cogtrace"
version = "0.2.0"
description = "Evidence-grounded cognitive state tracking for coding agents"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
eval = ["numpy>=1.26", "scikit-learn>=1.4"]
dev = ["pytest>=8", "ruff>=0.12"]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["cog_trace*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
